# phalanx

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  NGINX_ENTERPRISE_GAPS.txt  README.md  ROADMAP.md  node_server.js  parse_test.rs  phalanx.conf  phalanx_architecture_notes.md  plan.md  plan_v2.md  test.sh  test2.sh  test_ai_router.sh  test_all_features.sh  test_fastcgi.rs  test_hyper_err  test_prom.rs  test_prom2.rs  test_prom3.rs  test_prom4.rs  test_upgrade.rs
.github/workflows/: ci.yml
benches/: hot_paths.rs
scripts/: load_test.py  monitor_bandwidth.sh  run_tests.sh  smoke_test.py  start_test_backends.sh  test_api.py  test_dashboard.html  test_webrtc.html
src/: lib.rs  main.rs  reload.rs
src/admin/: alerts.rs  api.rs  dashboard.html  dashboard_api.rs  mod.rs  mod.rs.orig  mod.rs.patch  mod.rs.rej  webrtc_test.html
src/ai/: mod.rs
src/auth/: auth_request.rs  basic.rs  jwks.rs  jwt.rs  mod.rs  oauth.rs  oidc.rs
src/cluster/: gossip.rs  mod.rs
src/config/: mod.rs  parser.rs
src/discovery/: mod.rs
src/geo/: mod.rs
src/gslb/: mod.rs
src/k8s/: mod.rs
src/keyval/: mod.rs
src/mail/: mod.rs
src/middleware/: brotli.rs  cache.rs  compression.rs  connlimit.rs  mod.rs  ratelimit.rs
src/proxy/: executor.rs  fastcgi.rs  grpc_web.rs  http3.rs  mirror.rs  mod.rs  ocsp.rs  pool.rs  proxy_proto_v2.rs  realip.rs  rewrite.rs  router.rs  sticky.rs  tcp.rs  tls.rs  udp.rs  uwsgi.rs  webrtc.rs  websocket.rs  wt.rs  zero_copy.rs
src/routing/: mod.rs
src/scripting/: mod.rs  rhai_engine.rs
src/telemetry/: access_log.rs  bandwidth.rs  mod.rs  otel.rs
src/waf/: bot.rs  ml_fraud.rs  mod.rs  policy.rs  reputation.rs  rules.rs
src/wasm/: mod.rs
static/: index.html
tests/: proxy_test.rs  static_files_test.rs  wt_smoke.rs
