[package]
name = "ai_load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
arc-swap = "1.8.2"
async-stream = "0.3.6"
base64 = "0.22"
bytes = "1.11.1"
consistent_hash = "0.1.4"
criterion = "0.8.2"
crossbeam = "0.8.4"
dashmap = "6.1.0"
etcd-client = "0.18.0"
fastcgi-client = "0.10.0"
figment = "0.10.19"
flate2 = "1.1.1"
futures-util = "0.3.32"
governor = "0.10.4"
h2 = "0.4.13"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1.20"
jsonwebtoken = "9"
mime = "0.3.17"
mime_guess = "2.0.5"
moka = { version = "0.12.13", features = ["future"] }
nix = { version = "0.31.1", features = ["fs", "net"] }
nonzero = "0.2.0"
opentelemetry = "0.31.0"
parking_lot = "0.12.5"
prometheus = "0.14.0"
proptest = "1.10.0"
quinn = "0.11.9"
rand = "0.10.0"
rcgen = "0.14.7"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["json"] }
rocksdb = "0.24.0"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
slab = "0.4.12"
sled = "0.34.7"
socket2 = "0.6.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"

toml = "1.0.3"
tonic = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tract-onnx = "0.22.0"
trust-dns-resolver = "0.23.2"
